finalizando o modelo basico do cabeçalho

--- a/alura-geek/src/assets/styles/styles-global.css
+++ b/alura-geek/src/assets/styles/styles-global.css
@@ -3,6 +3,7 @@
 :root {
   --pagina-padrao: #fff;
   /* --page-dark: */
+  --pagina-claro:#F5F5F5;
   --rodape-padrao: #eaf2fd;
   /* --footer-darK: */
   --texto-padrao: #464646;
