finalizando a estrutura do radape

--- a/alura-geek/src/assets/styles/styles-global.css
+++ b/alura-geek/src/assets/styles/styles-global.css
@@ -7,6 +7,7 @@
   --rodape-padrao: #eaf2fd;
   /* --footer-darK: */
   --texto-padrao: #464646;
+  --texto-desfocado:#A2A2A2;
   --texto-destaque: #2a7ae4;
   --texto-claro: #fff;
   --botao-padrao: #2a7ae4;
